Fix pointer not showing up around the menu and close buttons

--- a/less/common.less
+++ b/less/common.less
@@ -46,7 +46,12 @@ body {
   .close {
     float: right;
     cursor: pointer;
-    margin: @default-margin;
+    padding: @default-padding;
+
+    img {
+      width: 24px;
+      height: 24px;
+    }
   }
 
   section {
@@ -130,7 +135,12 @@ header {
     max-height: 24px;
 
     .open {
-      margin: @default-margin;
+      padding: @default-padding;
+
+      img {
+        width: 24px;
+        height: 24px;
+      }
     }
 
     .logo {
